# pdftext

./: .gitignore  Dockerfile  LICENSE  README.md  benchmark.py  extract_text.py  plain_text.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  integration.yml  scripts.yml  tests.yml
benchmark/: verify_benchmark_scores.py
models/: dt.joblib  dt.onnx
pdftext/: extraction.py  inference.py  model.py  postprocessing.py  schema.py  settings.py  tables.py  utils.py
pdftext/pdf/: chars.py  extraction.py  links.py  pages.py  utils.py
pdftext/scripts/: extract_text.py
tests/: conftest.py  test_extraction.py  test_tables.py
