[tool.poetry]
name = "pdftext"
version = "0.1.0"
description = "Extract text from pdfs quickly"
authors = ["Vik Paruchuri <vik.paruchuri@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/VikParuchuri/pdftext"
keywords = ["pdf", "text", "extraction"]
packages = [
    {include = "pdftext"}
]
include = [
    "convert.py",
    "convert_single.py",
    "chunk_convert.sh",
    "benchmark.py",
    "chunk_convert.py",
    "models/dt.joblib"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13,!=3.9.7"
pypdfium2 = "^4.29.0"
scikit-learn = "^1.4.2"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
