[tool.poetry]
name = "pdftext"
version = "0.2.1"
description = "Extract structured text from pdfs quickly"
authors = ["Vik Paruchuri <vik.paruchuri@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/VikParuchuri/pdftext"
keywords = ["pdf", "text", "extraction"]
packages = [
    {include = "pdftext"}
]
include = [
    "extract_text.py",
    "models/dt.joblib"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13,!=3.9.7"
pypdfium2 = "^4.29.0"
scikit-learn = "^1.4.2"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"

[tool.poetry.group.dev.dependencies]
pymupdf = "^1.24.2"
datasets = "^2.19.0"
pdfplumber = "^0.11.0"
pillow = "^10.3.0"
rapidfuzz = "^3.8.1"
tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pdftext = "extract_text:main"
